# AgriNex-AI

./: README.md
ModelTraining/: crop disease training first phase.ipynb  crop disease training second phase.ipynb  plant_binary_classifier.ipynb
plant-disease-backend/: .gitattributes  .gitignore  init_db.py  pyproject.toml  requirements.txt
plant-disease-backend/app/: config.py  db_models.py  main.py  model.py  oci_storage.py  schemas.py  state.py
plant-disease-backend/app/agents/: crop_planner_agent.py  expert_agent.py  orchestrator.py  parse_utils.py  report_agent.py  web_agent.py
plant-disease-backend/app/model/: class.json  classifier.keras  model.keras
plant-disease-backend/app/routes/: activities.py  ai.py  database.py  predict.py  upload.py  user.py  utility.py  weather.py
plant-disease-backend/tests/: conftest.py  test_model.py  test_model_more.py  test_predict.py  test_predict_batch.py  test_upload_activity_ai_more.py  test_user_upload_activities.py  test_utility.py  test_weather_ai.py
plant-disease-frontend/lib/: FireBase.ts
